add initial assembly issue enums for step-to-geom orchestration